--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@element-plus/nuxt": "^1.0.5",
     "@nuxtjs/color-mode": "^3.2.0",
-    "@pinia/nuxt": "^0.4.10",
+    "@pinia/nuxt": "^0.4.11",
     "@types/bcrypt": "^5.0.0",
     "@types/busboy": "^1.5.0",
     "@types/jsonwebtoken": "^8.5.9",
@@ -28,19 +28,19 @@
     "vue-router": "^4.2.0"
   },
   "dependencies": {
-    "element-plus": "^2.3.4",
     "@element-plus/icons-vue": "^2.1.0",
-    "@pinia/nuxt": "^0.4.2",
     "@prisma/client": "^4.5.0",
     "@types/uuid": "^8.3.4",
+    "@vue/composition-api": "^1.7.1",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "element-plus": "^2.3.4",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "passport-jwt": "^4.0.0",
-    "pinia": "^2.0.22",
+    "pinia": "^2.1.3",
     "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
     "unplugin-icons": "^0.16.3",
