--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
     "@element-plus/nuxt": "^1.0.5",
     "@nuxtjs/color-mode": "^3.2.0",
     "@pinia/nuxt": "^0.4.11",
-    "@types/bcrypt": "^5.0.0",
-    "@types/busboy": "^1.5.0",
-    "@types/jsonwebtoken": "^8.5.9",
     "@types/multer": "^1.4.7",
     "@unocss/nuxt": "^0.51.13",
     "@vueuse/core": "^9.3.0",
@@ -29,17 +26,13 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@nuxt/http": "^0.6.4",
     "@prisma/client": "^4.5.0",
     "@types/uuid": "^8.3.4",
     "@vue/composition-api": "^1.7.1",
-    "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.1",
     "element-plus": "^2.3.4",
-    "jsonwebtoken": "^8.5.1",
-    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
-    "passport-jwt": "^4.0.0",
     "pinia": "^2.1.3",
     "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
